# learntrac

./: .gitignore  =1.1.0  AUTHENTICATION_UPGRADE.md  AWS_COGNITO_INTEGRATION.md  CLAUDE.md  CLEANUP_UNNECESSARY_FILES.md  COGNITO_ARCHITECTURE.md  COGNITO_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_ERROR_ANALYSIS.md  Dockerfile.cognito  MODERN_AUTH_DESIGN.md  Makefile  NEO4J_GRAPH_EXPLANATION.md  PDF_PROCESSING_SUMMARY.md  PDF_UPLOAD_TEST_SUMMARY.md  README-AWS-LAUNCH.md  README.md  SCHEMA_CONSISTENCY_ANALYSIS_SUMMARY.md  SYSTEM_COMPONENTS.md  VECTOR_SEARCH_TEST_RESULTS.md  add_concept_next_relationships.py  auth_test_response.html  check_neo4j_all_nodes.py  check_neo4j_content.py  check_neo4j_vector_data.py  check_relationships.py  clear_neo4j.py  clear_neo4j_api.py  cookies.txt  docker-compose-auth.yml  docker-compose.api-comprehensive.yml  docker-compose.api-dev.yml  docker-compose.api-final.yml  docker-compose.api.yml  docker-compose.aws-v2.yml  docker-compose.aws-v3.yml  (+80 more)
docs/: plan.md  (+11 more)
learntrac-api/: API_DOCUMENTATION.md  Dockerfile  Dockerfile.simple  INSTALLATION.md  LLM_INTEGRATION.md  NEO4J_SETUP.md  README.md  alembic.ini  docker-compose.yml  logging.conf  pdf_processing_analysis.md  pdf_processing_flow.md  pyproject.toml  requirements-complete.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  setup.sh  simple_chunker_test.py  simple_embedding_test.py  test_api.py  test_chunker_integration.py  test_evaluation_service.py  test_integration.py  test_llm_integration.py  test_neo4j_connection.py  test_pdf_extraction.py  test_pdf_extraction_simple.py  test_pdf_processing.py  test_ticket_service.py
learntrac-api/alembic/: env.py
learntrac-api/scripts/: health-check-trac.sh  start-api-simple.sh  start-api.sh  start-trac.sh
learntrac-api/src/: __init__.py  config.py  main.py  main_simple.py  middleware.py  minimal_api.py
(+484 files in other folders)
